# masterThesis

./: .gitignore  README.md  pyproject.toml
scripts/: compare_cl_results.py  prepare_data.py  train_anomaly_baseline.py  train_baseline.py  train_cl_ewc.py  train_cl_lwf.py  train_cl_replay.py
src/data/: __init__.py  continual.py  dataset.py  transforms.py
src/eval/: __init__.py  continual.py  metrics.py
src/models/: __init__.py  anomaly.py  backbone.py  classifier.py
src/strategies/: __init__.py  ewc.py  lwf.py  replay.py
src/utils/: seed.py
tests/: test_anomaly.py  test_data.py  test_eval.py  test_ewc.py  test_lwf.py  test_models.py  test_replay.py
