[project]
name = "pharma-cl-thesis"
version = "0.1.0"
description = "Continual learning for pharmaceutical pill image classification"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
