[project]
name = "pharma-cl-thesis"
version = "0.1.0"
description = "Continual learning for pharmaceutical pill image classification"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.12",
    "torchvision>=0.18",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
